--- a/package.json
+++ b/package.json
@@ -4,34 +4,35 @@
     "description": "Barbados Slim Fitness Web Application",
     "main": "server.js",
     "scripts": {
-      "start": "cross-env NODE_ENV=production node server",
-      "dev": "cross-env NODE_ENV=development nodemon server"
+        "start": "cross-env NODE_ENV=production node server",
+        "dev": "cross-env NODE_ENV=development nodemon server"
     },
     "author": "",
     "license": "MIT",
     "dependencies": {
-      "axios": "^0.27.2",
-      "bcrypt": "^5.0.1",
-      "cloudinary": "^1.25.1",
-      "connect-mongo": "^3.2.0",
-      "dotenv": "^8.2.0",
-      "ejs": "^3.1.6",
-      "express": "^4.17.1",
-      "express-flash": "^0.0.2",
-      "express-session": "^1.17.1",
-      "method-override": "^3.0.0",
-      "moment": "^2.29.4",
-      "mongodb": "^3.6.5",
-      "mongoose": "^5.12.3",
-      "morgan": "^1.10.0",
-      "multer": "^1.4.5-lts.1",
-      "passport": "^0.6.0",
-      "passport-local": "^1.0.0",
-      "passport-google-oauth20": "^2.0.0",
-      "validator": "^13.6.0"
+        "axios": "^0.27.2",
+        "bcrypt": "^5.0.1",
+        "chart.js": "^4.0.1",
+        "cloudinary": "^1.25.1",
+        "connect-mongo": "^3.2.0",
+        "dotenv": "^8.2.0",
+        "ejs": "^3.1.6",
+        "express": "^4.17.1",
+        "express-flash": "^0.0.2",
+        "express-session": "^1.17.1",
+        "method-override": "^3.0.0",
+        "moment": "^2.29.4",
+        "mongodb": "^3.6.5",
+        "mongoose": "^5.12.3",
+        "morgan": "^1.10.0",
+        "multer": "^1.4.5-lts.1",
+        "passport": "^0.6.0",
+        "passport-google-oauth20": "^2.0.0",
+        "passport-local": "^1.0.0",
+        "validator": "^13.6.0"
     },
     "devDependencies": {
-      "cross-env": "^7.0.3",
-      "nodemon": "^2.0.7"
+        "cross-env": "^7.0.3",
+        "nodemon": "^2.0.7"
     }
-  }
+}
