--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "main": "server.js",
     "scripts": {
         "start": "cross-env NODE_ENV=production node server",
-        "dev": "cross-env NODE_ENV=development nodemon server"
+        "dev": "cross-env NODE_ENV=development nodemon server",
+        "build": "tailwindcss -i ./views/src/input.css -o ./public/css/style.css",
+        "watch": "tailwindcss -i ./views/src/input.css -o ./public/css/style.css --watch"
     },
     "author": "",
     "license": "MIT",
@@ -15,6 +17,7 @@
         "chart.js": "^4.0.1",
         "cloudinary": "^1.25.1",
         "connect-mongo": "^3.2.0",
+        "daisyui": "^2.41.0",
         "dotenv": "^8.2.0",
         "ejs": "^3.1.6",
         "express": "^4.17.1",
@@ -33,6 +36,7 @@
     },
     "devDependencies": {
         "cross-env": "^7.0.3",
-        "nodemon": "^2.0.7"
+        "nodemon": "^2.0.7",
+        "tailwindcss": "^3.2.4"
     }
 }
